# Modern-Chess

./: .gitignore  CMakeLists.txt
ModernChess/: .clang-tidy  CMakeLists.txt  CodeStyle.md  Observations.md  ToDo.md
ModernChess/ModernChess/: CMakeLists.txt  main.cpp
ModernChess/ModernChessLib/include/ModernChess/: BasicParser.h  Board.h  Color.h  Evaluation.h  FenParsing.h  Game.h  GameState.h  GlobalConstants.h  MemoryAllocator.h  Move.h  MoveExecution.h  PeriodicTask.h  PrincipalVariationTable.h  PseudoRandomGenerator.h  Timer.h  TranspositionTable.h  UCICommunication.h  UCIParser.h  WaitCondition.h  ZobristHasher.h
ModernChess/ModernChessLib/src/: BasicParser.cpp  Board.cpp  CMakeLists.txt  Evaluation.cpp  FenParsing.cpp  Game.cpp  GameState.cpp  TranspositionTable.cpp  UCICommunication.cpp  UCIParser.cpp  ZobristHasher.cpp
ModernChess/Perft/: CMakeLists.txt  main.cpp
ModernChess/PerftLib/include/ModernChess/PerftLib/: PerformanceTest.h
ModernChess/PerftLib/src/: CMakeLists.txt  PerformanceTest.cpp
ModernChess/benchmarks/: Benchmark.cpp  CMakeLists.txt  FenFigureToEnumConversionTest.cpp  VectorReservationTest.cpp
ModernChess/docs/: UCI documentation.txt
ModernChess/include/: CMakeLists.txt
ModernChess/include/ModernChess/: 0x88_math.h  AttackQueries.h  AttacksGeneration.h  BasicParser.h  BishopAttackGeneration.h  BishopAttacks.h  BitBoard.h  BitBoardConstants.h  BitBoardOperations.h  BitBoardState.h  BitboardOperations.h  Board.h  CastleRights.h  CastlingRights.h  Color.h  FenParsing.h  Figure.h  Game.h  GameState.h  KingAttackGeneration.h  KingAttacks.h  KnightAttackGeneration.h  KnightAttacks.h  Move.h  MoveExecution.h  MoveGeneration.h  MoveGenerations.h  PawnAttackGeneration.h  PawnAttacks.h  PawnQueries.h  Player.h  PseudoMoveGeneration.h  QueenAttacks.h  RookAttackGeneration.h  RookAttacks.h  SlidingPieceAttackGeneration.h  Square.h  TUI.h  UCICommunication.h  UCIParser.h  (+10 more)
ModernChess/perft/: CMakeLists.txt  main.cpp
ModernChess/src/: AttackQueries.cpp  AttacksGeneration.cpp  BasicParser.cpp  BishopAttackGeneration.cpp  BitBoard.cpp  BitBoardState.cpp  Board.cpp  CMakeLists.txt  CPW.cpp  CastleRights.cpp  FenParsing.cpp  Game.cpp  GameState.cpp  Move.cpp  MoveGeneration.cpp  PawnAttackGeneration.cpp  Quiescence.cpp  RookAttackGeneration.cpp  SlidingPieceAttackGeneration.cpp  UCICommunication.cpp  UCIParser.cpp  Utilities.cpp  attacks.cpp  board0x88.cpp  book.cpp  chronos.cpp  com.cpp  console_ui.cpp  eval.cpp  eval_init.cpp  move.cpp  movegen.cpp  recognizer.cpp  search.cpp  see.cpp  stdafx.cpp  transposition.cpp  util.cpp
ModernChess/test/: AttackQueriesTest.cpp  AttacksGenerationTest.cpp  AttacksTest.cpp  BasicParserTest.cpp  BishopAttackGenerationTest.cpp  BishopAttacksTest.cpp  BitBoardConstantsTest.cpp  BitBoardOperationsTest.cpp  BitboardOperationsTest.cpp  BoardHelperUtility.h  BoardTest.cpp  CMakeLists.txt  CastleRightsTest.cpp  CastlingRightsTest.cpp  EvaluationTest.cpp  FenParsingTest.cpp  GameStateTest.cpp  MagicNumberCandidatesGeneration.cpp  MoveExecutionTest.cpp  MoveGenerationTest.cpp  MoveGenerationsTest.cpp  MoveTest.cpp  PawnAttacksTest.cpp  PawnPushesTest.cpp  PawnQueriesTest.cpp  PerftTest.cpp  PseudoMoveGenerationTest.cpp  QueenAttacksTest.cpp  RookAttackGenerationTest.cpp  RookAttacksTest.cpp  SlidingPieceAttackGenerationTest.cpp  SquareTest.cpp  TestingPositions.h  UCICommunicationTest.cpp  UCIParserTest.cpp  UtilitiesTest.cpp  ZobristHasherTest.cpp
ModernChess/test_integration/: CMakeLists.txt  main.cpp
